@@ -330,6 +330,7 @@ VOID PhWritePhTextHeader(
 
 #define PH_SHELL_APP_PROPAGATE_PARAMETERS 0x1
 #define PH_SHELL_APP_PROPAGATE_PARAMETERS_IGNORE_VISIBILITY 0x2
+#define PH_SHELL_APP_PROPAGATE_PARAMETERS_FORCE_SETTINGS 0x4
 
 BOOLEAN PhShellProcessHacker(
     __in HWND hWnd,
